--- a/config/aum.conf
+++ b/config/aum.conf
@@ -8,3 +8,4 @@ CONFIG_BOARD_CHARGER_CURRENT_100MA=y
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=4000
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_ZMK_STUDIO=y
